--- a/style.css
+++ b/style.css
@@ -1,32 +1,58 @@
 body {
   height: 100vh;
-  display: flex;
   flex-direction: column;
+}
+.header-nav,
+.links,
+h1,
+.button {
+  color: #f9faf8;
+}
+body,
+.sub,
+.subcontent-1,
+.nav,
+.links,
+#cards {
+  display: flex;
 }
 #content-1 {
   background-color: #1f2937;
 }
 .sub {
-  display: flex;
   justify-content: space-around;
   align-items: center;
   margin-bottom: 10px;
 }
 .subcontent-1 {
   margin: 5px 30px;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
 .nav {
-  display: flex;
   justify-content: space-around;
   margin-bottom: 10px;
 }
+#cards {
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.card {
+  width: 150px;
+  height: 150px;
+  margin: auto 15px;
+}
+.card img {
+  border: solid #3882f6 5px;
+  border-radius: 8%;
+  width: 100%;
+  height: 100%;
+}
+.square {
+}
 .header-nav {
   font-size: 24px;
-  color: #f9faf8;
 }
 ul {
   list-style: none;
@@ -40,14 +66,12 @@ a:link {
   text-decoration: none;
 }
 .links {
-  color: #f9faf8;
-  display: flex;
   justify-content: space-around;
 }
 h1 {
   font-size: 48px;
   font-weight: bolder;
-  color: #f9faf8;
+
   margin-bottom: auto;
 }
 p {
@@ -56,10 +80,19 @@ p {
 }
 .button {
   background-color: #3882f6;
-  color: #f9faf8;
 }
-img {
+.pic1 {
   margin: auto 20px;
   width: 300px;
   height: auto;
+}
+.header2 {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  text-align: center;
+  margin: 40px 24px;
+}
+.text {
+  text-align: center;
 }
