--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   height: 100vh;
   flex-direction: column;
+  margin: 0;
 }
 .header-nav,
 .links,
@@ -18,6 +19,24 @@ body,
 }
 #content-1 {
   background-color: #1f2937;
+  margin: 0%;
+}
+.content-3 {
+  background-color: #e5e7eb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  padding: 20px;
+}
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  text-align: center;
+}
+.name {
+  align-self: flex-end;
 }
 .sub {
   justify-content: space-around;
@@ -44,7 +63,7 @@ body,
   margin: auto 15px;
 }
 .card img {
-  border: solid #3882f6 5px;
+  border: solid #3882f6 3px;
   border-radius: 8%;
   width: 100%;
   height: 100%;
@@ -79,7 +98,10 @@ p {
   color: #e5e7eb;
 }
 .button {
+  border: none;
+  border-radius: 4px;
   background-color: #3882f6;
+  padding: 5px 25px;
 }
 .pic1 {
   margin: auto 20px;
