--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ body,
   margin-top: 20px;
   padding: 20px;
 }
+.sign {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #3882f6;
+  margin: 50px;
+}
 .quote {
   font-size: 36px;
   font-style: italic;
@@ -93,6 +100,12 @@ h1 {
 
   margin-bottom: auto;
 }
+.header4 {
+  font-size: 24px;
+}
+.text4 {
+  font-size: 12px;
+}
 p {
   font-size: 18px;
   color: #e5e7eb;
@@ -102,6 +115,10 @@ p {
   border-radius: 4px;
   background-color: #3882f6;
   padding: 5px 25px;
+}
+.button4 {
+  border: 2px solid #e5e7eb;
+  margin-left: ;
 }
 .pic1 {
   margin: auto 20px;
